Run scenario 5